# fast

./: .gitignore  .gitmodules  CMakeLists.txt  FindGLEW.cmake  LICENSE  README.md
fast/: CMakeLists.txt
fast/src/: AlphaModule.h  CSVOutputModule.h  Module.h  PackModule.h  SliceModule.h  TauModule.h  VolumeIOModule.h  main.cpp  measures.h  utility.h
fastlib/: CMakeLists.txt
fastlib/include/fastlib/: FastLibDef.h
fastlib/include/fastlib/cuda/: CudaMath.h  CudaUtility.h  ManagedAllocator.cuh
fastlib/include/fastlib/geometry/: AABB.h  BVH.h  Geometry.h  GeometryIO.h  GeometryObject.h  ImplicitGeometry.h  Intersection.h  SAP.h  SDF.h  Transform.h  Triangle.h  TriangleMesh.h
fastlib/include/fastlib/optimization/: SDFPacking.h  SimulatedAnnealing.h
fastlib/include/fastlib/solver/: BICGSTAB.h  CG.h  Diffusion.h  DiffusionSolver.h  LinearSystem.h  LinearSystemDevice.h  LinearSystemHost.h  Solver.h
fastlib/include/fastlib/utility/: DataPtr.h  GLGlobal.h  PoissonSampler.h  PrimitiveTypes.h  RandomGenerator.h  Resource.h  Timer.h  Types.h
fastlib/include/fastlib/volume/: Volume.h  VolumeGenerator.h  VolumeIO.h  VolumeMeasures.h  VolumeRasterization.h  VolumeSegmentation.h  VolumeSurface.h
fastlib/src/cuda/: BICGSTAB.cu  BICGSTAB.cuh  CG.cu  CG.cuh  CudaUtility.cpp  Diffusion.cu  Diffusion.cuh  LinearSys.cu  LinearSys.cuh  LinearSystemDevice.cu  LinearSystemDevice.cuh  MCTable.cuh  ResourceImpl.cu  ResourceImpl.cuh  SDF.cu  SDF.cuh  VectorAllocator.cuh  Volume.cu  Volume.cuh  VolumeCCL.cu  VolumeCCL.cuh  VolumeRasterization.cu  VolumeRasterization.cuh  VolumeSurface.cu  VolumeSurface.cuh  VolumeTypes.cuh
fastlib/src/geometry/: AABB.cpp  BVH.cpp  GeometryIO.cpp  GeometryObject.cpp  ImplicitGeometry.cpp  Intersection.cpp  SAP.cpp  SDF.cpp  Transform.cpp  Triangle.cpp  TriangleMesh.cpp
fastlib/src/optimization/: SDFPacking.cpp  SimulatedAnnealing.cpp
fastlib/src/solver/: BICGSTAB.cpp  CG.cpp  Diffusion.cpp  DiffusionSolver.cpp  LinearSys.cpp  LinearSystemDevice.cpp  LinearSystemHost.cpp
fastlib/src/utility/: DataPtr.cpp  GLGlobal.cpp  PoissonSampler.cpp  RandomGenerator.cpp  Resource.cpp
fastlib/src/volume/: Volume.cpp  VolumeGenerator.cpp  VolumeIO.cpp  VolumeMeasures.cpp  VolumeRasterization.cpp  VolumeSegmentation.cpp  VolumeSurface.cpp  touch.bat
fastviz/: CMakeLists.txt  Findglfw3.cmake  options.json
fastviz/src/: App.cpp  App.h  BatteryApp.cpp  BatteryApp.h  Ui.cpp  Ui.h  main.cpp
fastviz/src/render/: Camera.cpp  Camera.h  Framebuffer.cpp  Framebuffer.h  GLRenderer.cpp  GLRenderer.h  Light.h  MeshObject.cpp  MeshObject.h  PrimitivesVBO.cpp  PrimitivesVBO.h  RenderList.cpp  RenderList.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  ShaderResource.cpp  ShaderResource.h  Shaders.cpp  Shaders.h  Texture.cpp  Texture.h  VertexBuffer.cpp  VertexBuffer.h  VolumeRaycaster.cpp  VolumeRaycaster.h
fastviz/src/shaders/: default.vertex  flat.shader  forwardphong.shader  passthrough.vert  position.shader  primitives.glsl  volumeraycast.shader  volumeslice.shader
fastviz/src/utility/: IOUtility.cpp  IOUtility.h  Options.cpp  Options.h  mathtypes.h
